force-app/main/default/objects/WorkOrderLineItem/fields/Corrective_Action__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action__c</fullName>
    <label>시정 조치</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>