force-app/main/default/objects/WorkOrderLineItem/fields/Delta_From_Previous__c.field-meta.xml
<CustomField>
    <fullName>Delta_From_Previous__c</fullName>
    <label>직전 대비 변화</label>
    <description>이번 측정값과 직전 측정값의 차이(측정값 - 직전 측정값). 연속 하락 추세 판정의 근거로 Flow가 자동 계산한다.</description>
    <inlineHelpText>이번 측정값에서 직전 측정값을 뺀 값이 자동으로 계산됩니다.</inlineHelpText>
    <precision>9</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>