force-app/main/default/objects/WorkOrderLineItem/fields/Drift_From_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Drift_From_Baseline__c</fullName>
    <label>기준선 대비 변화율</label>
    <description>기준선 값 대비 이번 측정값의 변화율((측정값 - 기준선 값) / 기준선 값 × 100). 절대 판정이 합격이어도 추세 악화를 드러내는 조기 감지 지표로 Flow가 자동 계산한다.</description>
    <inlineHelpText>기준선 대비 하락률(음수)·상승률(양수)이 백분율로 자동 계산됩니다.</inlineHelpText>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>