force-app/main/default/objects/WorkOrderLineItem/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>조치 기한</label>
    <type>Date</type>
</CustomField>