force-app/main/default/objects/WorkOrderLineItem/fields/Judgement__c.field-meta.xml
<CustomField>
    <fullName>Judgement__c</fullName>
    <label>판정</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>합격</fullName>
            </value>
            <value>
                <fullName>불합격</fullName>
            </value>
            <value>
                <fullName>측정불가</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>