force-app/main/default/objects/WorkOrderLineItem/fields/Line_Item_Role__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Role__c</fullName>
    <label>항목 역할</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>시험</fullName>
            </value>
            <value>
                <fullName>복구조치</fullName>
            </value>
            <value>
                <fullName>검증</fullName>
            </value>
            <value>
                <fullName>점검</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>