force-app/main/default/objects/WorkOrderLineItem/fields/Measured_Value__c.field-meta.xml
<CustomField>
    <fullName>Measured_Value__c</fullName>
    <label>측정값</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>