force-app/main/default/objects/WorkOrderLineItem/fields/Parent_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Parent_Line_Item__c</fullName>
    <label>상위 측정 항목</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipLabel>재시험 항목</relationshipLabel>
    <relationshipName>Retest_Items</relationshipName>
    <type>Lookup</type>
</CustomField>