force-app/main/default/objects/WorkOrderLineItem/fields/Punch_Status__c.field-meta.xml
<CustomField>
    <fullName>Punch_Status__c</fullName>
    <label>Punch 상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>조치중</fullName>
            </value>
            <value>
                <fullName>조치완료</fullName>
            </value>
            <value>
                <fullName>검증완료</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>