force-app/main/default/objects/WorkOrderLineItem/fields/Retest_Reason__c.field-meta.xml
<CustomField>
    <fullName>Retest_Reason__c</fullName>
    <label>재시험 사유</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>조정</fullName>
            </value>
            <value>
                <fullName>시정</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>