force-app/main/default/objects/WorkOrderLineItem/fields/Retest_Round__c.field-meta.xml
<CustomField>
    <fullName>Retest_Round__c</fullName>
    <label>재시험 회차</label>
    <defaultValue>1</defaultValue>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>