force-app/main/default/objects/WorkOrderLineItem/fields/Root_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Root_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>최초 측정 항목</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipLabel>파생 재시험 항목</relationshipLabel>
    <relationshipName>Derived_Retest_Items</relationshipName>
    <type>Lookup</type>
</CustomField>