force-app/main/default/objects/WorkOrderLineItem/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>WOLI 출처</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIMULATOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>