force-app/main/default/objects/WorkOrderLineItem/fields/Spec_Load_Warning__c.field-meta.xml
<CustomField>
    <fullName>Spec_Load_Warning__c</fullName>
    <description>기준값 자동 적재 시 발생한 경고 사유. Baseline Spec 미적재 또는 적용 리비전과 Baseline 버전 불일치를 담는다. 공란이면 정상.</description>
    <inlineHelpText>기준값 자동 적재 경고가 있을 때만 채워집니다. 값이 있으면 조치가 필요합니다.</inlineHelpText>
    <label>기준값 적재 경고</label>
    <length>255</length>
    <type>Text</type>
</CustomField>