force-app/main/default/objects/WorkOrderLineItem/fields/Spec_Value__c.field-meta.xml
<CustomField>
    <fullName>Spec_Value__c</fullName>
    <description>적용 리비전의 Baseline Spec에서 자동 적재된 시험 기준값. 시운전 측정값 합격 판정의 기준이 된다.</description>
    <inlineHelpText>Baseline Spec에서 자동으로 채워집니다. 수동 입력하지 마십시오.</inlineHelpText>
    <label>기준값</label>
    <precision>9</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>