force-app/main/default/objects/WorkOrderLineItem/fields/Threshold_Max__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Max__c</fullName>
    <description>적용 리비전의 Baseline Spec에서 자동 적재된 허용 상한. 시운전 측정값이 이 값을 넘으면 불합격이다.</description>
    <inlineHelpText>Baseline Spec에서 자동으로 채워집니다. 수동 입력하지 마십시오.</inlineHelpText>
    <label>허용 상한</label>
    <precision>9</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>