force-app/main/default/objects/WorkOrderLineItem/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>단위</label>
    <length>10</length>
    <type>Text</type>
</CustomField>