force-app/main/default/objects/WorkOrderLineItem/fields/Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Verified_Date__c</fullName>
    <label>검증일</label>
    <type>Date</type>
</CustomField>